# testEvrika

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  testEvrika.desktop
.gitlab/: snippets.yml
deb/DEBIAN/: control  postinst  postrm
src/c++/: main.cc
src/c++/widget/: BaseWidget.cc  BaseWidget.h  mainWidget.cc  mainWidget.h  secondWidget.cc  secondWidget.h
task/: task.txt
